# ZeroTier-SystemTray

./: .gitignore  49-zerotier.rules  CMakeLists.txt  LICENSE  LazyCommit.sh  PKGBUILD  README.md  main.cpp  zerotier-status-daemon.desktop
